--- a/to.etc.domui/src/resources/themes/domui/500_form4.frag.css
+++ b/to.etc.domui/src/resources/themes/domui/500_form4.frag.css
@@ -15,6 +15,10 @@
 	padding: 0px 0px 0px 4px;
 }
 
+.ui-f4-h {
+	margin-bottom: 10px;
+}
+
 /*-- overrides --*/
 .ui-f4 td, .ui-f4 label {
 	vertical-align: baseline !important;
